# alleno-ora

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: database.cpp.4F25202BFDAE9675.idx  database.hpp.C5B5B5FDB6289394.idx  file.cpp.AB12610B889F56F7.idx  file.hpp.8C00112F5191D45D.idx  main.cpp.1627717FBA2FB516.idx  workout.cpp.DC5517DE1E08BA1A.idx  workout.hpp.6C97B228FC7616AB.idx
include/: database.hpp  file.hpp  workout.hpp
src/: a.out  alleno  build.sh  config.txt  database.cpp  database.hpp  db.cpp  db.hpp  example.txt  file.cpp  file.hpp  main  main.cpp  test  test.cpp  test1.txt  todo.norg  workout.cpp  workout.hpp  workout.txt
src/include/: database.hpp  file.hpp  workout.hpp
